# projectalfred

./: .dockerignore  .env.example  .gitignore  =2.6.0  =6.100.0  CLAUDE.md  CODEX.md  CONTEXT.md  Dockerfile  README.md  coverage.json  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs-governance.yml  release.yml
configs/: alfred_handover_template.md  default.yaml  handover_template.md
data/dogfood/: handover3_run1.json
docs/: ALFRED_HANDOVER_1.md  ALFRED_HANDOVER_2.md  ALFRED_HANDOVER_3.md  ALFRED_HANDOVER_4.md  ALFRED_HANDOVER_4_BUG_SCRUB.md  ALFRED_HANDOVER_4_OUTPUT_HARDENING.md  ALFRED_HANDOVER_5.md  ALFRED_HANDOVER_5_DRAFT.md  ALFRED_HANDOVER_5_OUTPUT_HARDENING.md  ALFRED_HANDOVER_6_DRAFT.md  DOCS_MANIFEST.yaml  DOCS_POLICY.md  architecture.md  builder_prompt.md
docs/active/: ALFRED_BLANK_PROJECT_KICKOFF_DEMO_PHASE_0_FROZEN_SCENARIO.md  (+17 more)
evals/: run_evals.py  scorer.py
scripts/: backfill_phase4_bodies.py  check_coverage.py  check_manifest.py  coverage_thresholds.json  demo_preflight.py  dogfood_run.py  generate_next_canonical_handover.py  generate_phase6.py  generate_phase7.py  generate_phase7_canonical.py  generate_phase8_canonical.py  init_demo_workspace.py  resume_phase4_write.py  run_kickoff_demo.py  validate_alfred_handover.py  validate_alfred_planning_facts.py
tests/: http_client.py  test_api.py  test_api_shutdown.py  test_cli.py  test_grounding_refinement_integration.py  test_orchestrator.py  test_orchestrator_board_writer.py  test_orchestrator_critique.py  test_orchestrator_story_persistence.py
(+127 files in other folders)
