[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred"
version = "0.1.0"
description = "Document-mediated, checkpoint-gated agent coordination for software teams."
requires-python = ">=3.10"
dependencies = [
    # Core
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # LLM
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    # GitHub Projects V2
    "httpx>=0.27.0",
    # RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Persistence
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "hypothesis>=6.100.0",
]

[project.scripts]
alfred = "alfred.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
strict = []
